--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.8.0",
     "@types/jest": "^25.2.3",
     "directory-tree": "^2.2.4",
+    "eslint": "^7.32.0",
     "jest": "^26.0.1",
     "line-replace": "^2.0.1",
     "lodash": "^4.17.15",
