--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "open index.html",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "postinstall": "node .scripts/badge.js"
+    "postinstall": "node .scripts/badge.js",
+    "cy:open" : "cypress open",
+    "cy:run" : "cypress run"
+
   },
   "author": "Yahya Gilany <gilanyym@ucmail.uc.edu>",
   "license": "UNLICENSED",
@@ -16,6 +19,7 @@
     "@testing-library/dom": "^7.31.0",
     "@testing-library/jest-dom": "^5.8.0",
     "@types/jest": "^25.2.3",
+    "cypress": "^13.13.1",
     "directory-tree": "^2.2.4",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
